[client] Fix tooltips in dark mode and toggle button
## Motivation

Tooltips aren't visible in dark mode.

## Change description

- Set to darkaware colors
- Fix sizing and padding on toolbars

## Checklists

- [x] Security impact of change has been considered
- Data Incident Risk: 
    - [x] None
    - [ ] Low
    - [ ] High

--- a/client/src/app/components/NavMenu.module.css
+++ b/client/src/app/components/NavMenu.module.css
@@ -3,6 +3,8 @@
   align-items: center;
   justify-content: center;
   color: gray;
+  width: 28px;
+  height: 28px;
 
   &:hover {
     color: var(--mantine-color-primary-filled);
